--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Guilherme Louro",
   "license": "MIT",
   "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
     "@netlify/plugin-nextjs": "^3.9.0",
     "@testing-library/react": "^10.0.4",
     "@types/jest": "^25.2.3",
