--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react-hooks": "^4.0.4",
     "jest": "^26.0.1",
     "jest-styled-components": "^7.0.2",
+    "netlify-cli": "^6.8.5",
     "prettier": "^2.0.5",
     "typescript": "^3.9.5"
   },
